--- a/index.html
+++ b/index.html
@@ -511,6 +511,32 @@
   </div>
 </div>
 
+<!-- Sponsorship -->
+<div id="sponsors" class="content-section-a">
+  <div class="container">
+    <h2 class="section-heading">Sponsors</h2>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <div class="sponsor-section">
+          <div class="sponsor-logos">
+            <div class="col-md-6 col-sm-6 text-center">
+              <div class="sponsor-logo">
+                <img src="img/sponsor/zm.png" alt="Sponsor Logo" class="img-responsive" style="max-height: 120px; margin: 20px auto; display: block;">
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-6 text-center">
+              <div class="sponsor-logo">
+                <img src="img/sponsor/ts.png" alt="Sponsor Logo" class="img-responsive" style="max-height: 120px; margin: 20px auto; display: block;">
+              </div>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <footer>
   <div class="container">
     <div class="row">
